# LudusMusicalis

./: .gitignore  LICENSE  MTM-LudusMusicalis.ipynb  MTM-NonLinearMusic.ipynb  README.md  pyproject.toml  requirements.txt
ConcertTimeline/: ConcertTimeline.pde
